--- a/Client/package.json
+++ b/Client/package.json
@@ -1,43 +1,42 @@
 {
-  "name": "clone-flipkart-website",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.11",
-    "@mui/x-data-grid": "^6.18.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/x-data-grid": "^5.4.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
-    "notistack": "^3.0.1",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-countdown": "^2.3.5",
-    "react-dom": "^18.2.0",
+    "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
+    "flipkart": "file:..",
+    "notistack": "^2.0.3",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-multi-carousel": "^2.8.2",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
-    "react-spinners": "^0.13.8",
-    "redux": "^4.2.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
-    "source-map-explorer": "^2.5.3",
-    "web-vitals": "^2.1.4",
+    "source-map-explorer": "^2.5.2",
+    "web-vitals": "^2.1.3",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set \"GENERATE_SOURCEMAP=false\" &&  react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +57,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.5"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
   }
 }
