--- a/Client/package.json
+++ b/Client/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
-    "@mui/x-data-grid": "^6.18.6",
+    "@mui/styled-engine": "^5.15.3",
+    "@mui/x-data-grid": "^6.18.7",
     "@redux-devtools/extension": "^3.3.0",
-    "axios": "^1.6.4",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
+    "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
