--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "js-cookie": "^3.0.5",
     "notistack": "^3.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^5.2.0",
